# advent-of-code-2025

./: .gitignore  README.md  advent-of-code.cabal  init_day.sh
common/: CircularList.hs  Common.hs  Vec.hs
day01/: Main.hs
day02/: Main.hs
day03/: Main.hs
day04/: Main.hs
day05/: Main.hs
day06/: Main.hs
day07/: Main.hs
day08/: Main.hs
day09/: Main.hs
day10/: Main.hs  part2.py
day11/: Main.hs
day12/: Main.hs
