cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0
author:             Vasil Shotarov
maintainer:         vshotarov@gmail.com

library Common
    exposed-modules:  CircularList, Common, Vec
    build-depends:    base
                     ,directory
                     ,containers
    hs-source-dirs:   common
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages


executable day01
    main-is:          Main.hs
    build-depends:    base
                     ,Common
    hs-source-dirs:   day01
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages
