cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0
author:             Vasil Shotarov
maintainer:         vshotarov@gmail.com

library Common
    exposed-modules:  CircularList, Common, Vec
    build-depends:    base
                     ,directory
                     ,containers
    hs-source-dirs:   common
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages


executable day01
    main-is:          Main.hs
    build-depends:    base
                     ,Common
    hs-source-dirs:   day01
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day02
    main-is:          Main.hs
    build-depends:    base
                     ,Common
                     ,split
    hs-source-dirs:   day02
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day03
    main-is:          Main.hs
    build-depends:    base
                     ,Common
    hs-source-dirs:   day03
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day04
    main-is:          Main.hs
    build-depends:    base
                     ,Common
                     ,containers
    hs-source-dirs:   day04
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day05
    main-is:          Main.hs
    build-depends:    base
                     ,Common
    hs-source-dirs:   day05
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day06
    main-is:          Main.hs
    build-depends:    base
                     ,Common
                     ,split
    hs-source-dirs:   day06
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day07
    main-is:          Main.hs
    build-depends:    base
                     ,Common
                     ,containers
    hs-source-dirs:   day07
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day08
    main-is:          Main.hs
    build-depends:    base
                     ,Common
                     ,containers
                     ,split
    hs-source-dirs:   day08
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day09
    main-is:          Main.hs
    build-depends:    base
                     ,Common
    hs-source-dirs:   day09
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

executable day10
    main-is:          Main.hs
    build-depends:    base
                     ,Common
                     ,containers
                     ,split
    hs-source-dirs:   day10
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages
